--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -61,7 +62,7 @@
             <!-- Columna derecha: Contenedor de tarjetas -->
             <div class="col-md-6" id="cont-cards">
                 <h2 class="mb-3">Vehículos Registrados</h2>
-                <div class="row g-3">
+                <div class="row g-3" id="cont-cardss">
                     <!-- Ejemplo de tarjeta -->
                     <div class="col-md-6 item-vehiculo">
                         <div class="card h-100">
@@ -88,6 +89,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+        <script src="js/main.js"></script>
 </body>
 
 </html>
