añadi estilos a botones de vaciar y ver compras

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <h2>Carrito</h2>
         <h3 id="total-panel">total: $0</h3>
       </div>
-
-      <a href="compras.html">Ver Compras</a>
+      <br>
+      <a id="ver-compras" href="compras.html">Ver Compras</a>
 
       
     </section>
